charon/tests/cargo/error-dependencies.out
error: Error parsing attribute: Unrecognized attribute: `charon::error`
 --> src/module.rs:5:1
  |
5 | #[charon::error]
  | ^^^^^^^^^^^^^^^^

error: Error parsing attribute: Unrecognized attribute: `charon::error`
 --> ./tests/cargo/error-dependencies/error-crate/src/lib.rs:4:1

note: the error occurred when translating `error_crate::CausesError`, which is (transitively) used at the following location(s):
  --> src/main.rs:16:5
   |
16 |     pub fn erroring_function(_: error_crate::CausesError) {}
   |     --------------------------------------------------------
   |
  ::: src/module.rs:7:9
   |
 7 |     let x = error_crate::CausesError;
   |         -   ------------------------
 8 |     let _y = error_crate::CausesError;
   |              ------------------------
error: Error parsing attribute: Unrecognized attribute: `charon::error`
 --> ./tests/cargo/error-dependencies/error-crate/src/lib.rs:4:1

ERROR Charon failed to translate this code (3 errors)
error: could not compile `test-cargo` (bin "test-cargo")

Caused by: